--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "heroku node test",
   "main": "index.js",
+  "engines": {
+    "node": "0.10.x"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
