--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hnt",
   "version": "1.0.0",
   "description": "heroku node test",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": "0.10.x"
   },
